erDiagram
    HECHOS_DEMOGRAFICOS ||--o{ DIM_MATERIA       : evalua
    HECHOS_DEMOGRAFICOS ||--|| DIM_ASISTENCIAS   : incluye

    HECHOS_DEMOGRAFICOS {
        varchar MATRICULA          PK
        varchar NOMBRE
        varchar APELLIDO_PATERNO
        varchar APELLIDO_MATERNO
        string  GENERO
        date    FECHA_NACIMIENTO
        varchar NACIONALIDAD
        int     SEMESTRE           PK
        int     materia_id         FK
        decimal PORCENTAJE
        decimal PROMEDIO
        boolean RIESGO_REPROBACION
    }

    DIM_MATERIA {
        int     materia_id         PK
        varchar nombre_materia
        decimal PROMEDIO_MATERIA
    }

    DIM_ASISTENCIAS {
        varchar MATRICULA          FK
        int     SEMESTRE           FK
        int     TOTAL_ASISTENCIAS
        int     TOTAL_INASISTENCIAS
        decimal PORCENTAJE_ASISTENCIA
    }